# model_fitting_tool

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  TOOL_STRUCTURE.md  example_usage.py  pyproject.toml  pytest.ini  requirements.txt  run_gui.py
elastic_net_tool/: __init__.py  bin_suggestor.py  discovery.py  gui.py  io_utils.py  metrics.py  model.py  plots.py  tool.py  variable.py
tests/: conftest.py  test_bin_suggestor.py  test_bootstrap.py  test_discovery.py  test_gui.py  test_io.py  test_metrics.py  test_model.py  test_tool.py  test_variable.py
