[project]
name = "elastic-net-tool"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "glum>=2.0",
    "scikit-learn>=1.0",
    "polars>=0.19",
    "numpy>=1.22",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "panel>=1.0",
    "pandas>=1.5",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
full = ["lightgbm", "shap", "openpyxl", "optbinning"]

[dependency-groups]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
]
